# Computer-Architecture-Project

./: README.md
Informe y Diapositiva del proyecto/: InformeProyectoArquitectura.docx  diapositivas proyecto final.pptx
architecture project/: Data.cpp  makefile  mergesort.cpp  paraleerlosdatos.cpp  quicksort.cpp
architecture project/src/: Data.cpp  makefile
architectureProject/: CMakeLists.txt  Makefile  cache_sort_analysis  makefilejesus  partes.txt
architectureProject/include/: CacheSimulator.h  MemoryAnalyzer.h  SortAlgorithms.h
architectureProject/src/: CacheSimulator.cpp  MemoryAnalyzer.cpp  SortAlgorithms.cpp  classCache.cpp  main.cpp  mergesort.cpp  quicksort.cpp
architectureProject/tests/: CMakeLists.txt
